updates on travel history

--- a/malaria24/ona/templates/ona/html_national_digest.html
+++ b/malaria24/ona/templates/ona/html_national_digest.html
@@ -28,20 +28,20 @@
       <td colspan="7" style="text-align: center;"><strong>International Travel History</strong></td>
     </tr>
     <tr>
-      <th>Province</th>
-      <th>District</th>
-      <th>No. of Cases</th>
-      <th>Male</th>
-      <th>Female</th>
-      <th>Under 5</th>
-      <th>Over 5</th>
-      <th>No international travel</th>
-      <th>Somalia</th>
-      <th>Ethiopia</th>
-      <th>Mozambique</th>
-      <th>Zambia</th>
-      <th>Zimbabwe</th>
-      <th>Other</th>
+      <th style="width: 11%;">Province</th>
+      <th style="width: 11%;">District</th>
+      <th style="width: 6.5%;">All Cases</th>
+      <th style="width: 6.5%;">Male</th>
+      <th style="width: 6.5%;">Female</th>
+      <th style="width: 6.5%;">Under 5</th>
+      <th style="width: 6.5%;">Over 5</th>
+      <th style="width: 6.5%;">No intl travel</th>
+      <th style="width: 6.5%;">Somalia</th>
+      <th style="width: 6.5%;">Ethiopia</th>
+      <th style="width: 6.5%;">Moz</th>
+      <th style="width: 6.5%;">Zambia</th>
+      <th style="width: 6.5%;">Zimbabwe</th>
+      <th style="width: 6.5%;">Other</th>
     </tr>
     {% for province in provinces %}
       {% if province.cases %}
