--- a/malaria24/ona/templates/ona/html_provincial_digest.html
+++ b/malaria24/ona/templates/ona/html_provincial_digest.html
@@ -18,7 +18,7 @@
       <td colspan="15" style="text-align: center;"><strong>National Department of Health: Malaria Elimination Programme</strong></td>
     </tr>
     <tr>
-      <td colspan="15" style="text-align: center;"><strong>Provincial MalariaConnect Report</strong></td>
+      <td colspan="15" style="text-align: center;"><strong>MalariaConnect Summary</strong></td>
     </tr>
     <tr>
       <td colspan="15" style="text-align: center;"><strong>{{week}}</strong></td>
