Change load staticfiles in template files to load static

--- a/malaria24/ona/templates/ona/html_email.html
+++ b/malaria24/ona/templates/ona/html_email.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}<html>
+{% load static %}<html>
 <body>
   <table border="1" style="width: 100%; border: 1px #DEDFDE solid;" cellspacing="0" cellpadding="2">
     <tr>
